feat: curate daily AI and semiconductor Top10 with weighted ranking

--- a/src/top10_news_crawler/config/sources.yaml
+++ b/src/top10_news_crawler/config/sources.yaml
@@ -1,30 +1,39 @@
 sources:
-  - id: bbc_world
-    name: BBC World
-    weight: 1.0
-    rss: "http://feeds.bbci.co.uk/news/world/rss.xml"
+  # ===== AI / Tech 主流 =====
+  - id: verge
+    name: The Verge
+    rss: https://www.theverge.com/rss/index.xml
 
-  - id: bbc_top
-    name: BBC Top Stories
-    weight: 1.0
-    rss: "http://feeds.bbci.co.uk/news/rss.xml"
+  - id: techcrunch
+    name: TechCrunch
+    rss: https://techcrunch.com/feed/
 
-  - id: guardian_world
-    name: The Guardian - World
-    weight: 1.0
-    rss: "https://www.theguardian.com/world/rss"
+  - id: wired
+    name: WIRED
+    rss: https://www.wired.com/feed/rss
 
-  - id: guardian_international
-    name: The Guardian - International
-    weight: 1.0
-    rss: "https://www.theguardian.com/international/rss"
+  - id: ars
+    name: Ars Technica
+    rss: https://feeds.arstechnica.com/arstechnica/index/
 
-  - id: aljazeera_all
-    name: Al Jazeera - All
-    weight: 1.0
-    rss: "https://www.aljazeera.com/xml/rss/all.xml"
+  # ===== 半導體 / 硬體 =====
+  - id: eetimes
+    name: EE Times
+    rss: https://www.eetimes.com/feed/
 
-  - id: npr_news
-    name: NPR - News
-    weight: 0.9
-    rss: "https://feeds.npr.org/1001/rss.xml"
+  - id: semiwiki
+    name: SemiWiki
+    rss: https://semiwiki.com/feed/
+
+  - id: nvidia
+    name: NVIDIA Press Room
+    rss: https://nvidianews.nvidia.com/rss.xml
+
+  - id: amd
+    name: AMD Press
+    rss: https://www.amd.com/en/rss.xml
+
+  # ===== 保底（仍保留 1~2 個世界新聞）=====
+  - id: bbc_tech
+    name: BBC Technology
+    rss: https://feeds.bbci.co.uk/news/technology/rss.xml
